# WinMan

./: .gitignore  Cargo.toml  Makefile  build.rs  build_release.bat  winman.rs
app/: dummy.rs  hotkey.rs  mod.rs  window.rs
res/: resource.h  winman.rc  winman.res
src/: constants.rs  utils.rs  window_tracking.rs  winman.rs
src/utils/: api_wrappers.rs  mod.rs
src/windows/: messages.rs  mod.rs  popup.rs
src/windows/main/: mod.rs
src/windows/popup/: edit.rs  mod.rs
win32/: constants.rs  macro.rs  mod.rs  types.rs  window.rs  wstr.rs
