[package]

name = "winman"
version = "0.0.1"
authors = [
	"Ruben Bakker <rubenbak@gmail.com>"
]
build="build.rs"

[[bin]]
name = "winman"
path = "src/winman.rs"

[dependencies]
winapi = "0.2.8"
comctl32-sys = "0.2.0"
kernel32-sys = "0.2.2"
user32-sys = "0.1.2"
gdi32-sys = "0.2.0"
lazy_static = "0.1.16"
fuzzy = { path = "deps/fuzzy" }
spmc = "0.2.1"